Bug 355375 - Make context menuitems blink when chosen. r=enn