layout/xul/base/src/nsMenuBarFrame.h
@@ -91,6 +91,9 @@ public:
 
   virtual nsIAtom* GetType() const { return nsGkAtoms::menuBarFrame; }
 
+  virtual void LockMenuUntilClosed(PRBool aLock) {}
+  virtual PRBool IsMenuLocked() { return PR_FALSE; }
+
 // Non-interface helpers
 
   void
